@@ -101,6 +101,7 @@ typedef struct st_mysqlnd_packet_auth {
 	/* +1 for \0 because of scramble() */
 	unsigned char	*server_scramble_buf;
 	size_t			db_len;
+	zend_bool		send_half_packet;
 } MYSQLND_PACKET_AUTH;
 
 /* OK packet */
